# decorator-lib-rs

./: .gitignore  Cargo.toml  README.md  config,json  config.json
.cargo/: config.toml
.github/workflows/: create-release.yml  publish.yml  update-registry.yml
de/co/: decorator
src/: lib.rs
tests/: async_tests.rs  integration_test.rs  sync_tests.rs
tests/common/: mod.rs
