[package]
name = "decorator"
description = "A Rust procedural macro library for creating decorators"
repository = "https://github.com/AABelkhiria/decorator-lib-rs"
license = "MIT"
authors = ["A.Belkhiria <belkhiria.achraf@gmail.com>"]
version = "25.7.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
